; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_mathematics.c_av_compare_ts.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_mathematics.c_av_compare_ts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i64 }

@INT_MAX = common dso_local global i32 0, align 4
@AV_ROUND_DOWN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @av_compare_ts(i32 %0, i32 %1, i64 %2, i32 %3, i32 %4, i64 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_4__, align 8
  %9 = alloca %struct.TYPE_4__, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = bitcast %struct.TYPE_4__* %8 to { i32, i64 }*
  %15 = getelementptr inbounds { i32, i64 }, { i32, i64 }* %14, i32 0, i32 0
  store i32 %1, i32* %15, align 8
  %16 = getelementptr inbounds { i32, i64 }, { i32, i64 }* %14, i32 0, i32 1
  store i64 %2, i64* %16, align 8
  %17 = bitcast %struct.TYPE_4__* %9 to { i32, i64 }*
  %18 = getelementptr inbounds { i32, i64 }, { i32, i64 }* %17, i32 0, i32 0
  store i32 %4, i32* %18, align 8
  %19 = getelementptr inbounds { i32, i64 }, { i32, i64 }* %17, i32 0, i32 1
  store i64 %5, i64* %19, align 8
  store i32 %0, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 1
  %23 = load i64, i64* %22, align 8
  %24 = trunc i64 %23 to i32
  %25 = mul nsw i32 %21, %24
  store i32 %25, i32* %12, align 4
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %27 = load i32, i32* %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 1
  %29 = load i64, i64* %28, align 8
  %30 = trunc i64 %29 to i32
  %31 = mul nsw i32 %27, %30
  store i32 %31, i32* %13, align 4
  %32 = load i32, i32* %10, align 4
  %33 = call i32 @FFABS(i32 %32)
  %34 = load i32, i32* %12, align 4
  %35 = or i32 %33, %34
  %36 = load i32, i32* %11, align 4
  %37 = call i32 @FFABS(i32 %36)
  %38 = or i32 %35, %37
  %39 = load i32, i32* %13, align 4
  %40 = or i32 %38, %39
  %41 = load i32, i32* @INT_MAX, align 4
  %42 = icmp sle i32 %40, %41
  br i1 %42, label %43, label %61

43:                                               ; preds = %6
  %44 = load i32, i32* %10, align 4
  %45 = load i32, i32* %12, align 4
  %46 = mul nsw i32 %44, %45
  %47 = load i32, i32* %11, align 4
  %48 = load i32, i32* %13, align 4
  %49 = mul nsw i32 %47, %48
  %50 = icmp sgt i32 %46, %49
  %51 = zext i1 %50 to i32
  %52 = load i32, i32* %10, align 4
  %53 = load i32, i32* %12, align 4
  %54 = mul nsw i32 %52, %53
  %55 = load i32, i32* %11, align 4
  %56 = load i32, i32* %13, align 4
  %57 = mul nsw i32 %55, %56
  %58 = icmp slt i32 %54, %57
  %59 = zext i1 %58 to i32
  %60 = sub nsw i32 %51, %59
  store i32 %60, i32* %7, align 4
  br label %80

61:                                               ; preds = %6
  %62 = load i32, i32* %10, align 4
  %63 = load i32, i32* %12, align 4
  %64 = load i32, i32* %13, align 4
  %65 = load i32, i32* @AV_ROUND_DOWN, align 4
  %66 = call i32 @av_rescale_rnd(i32 %62, i32 %63, i32 %64, i32 %65)
  %67 = load i32, i32* %11, align 4
  %68 = icmp slt i32 %66, %67
  br i1 %68, label %69, label %70

69:                                               ; preds = %61
  store i32 -1, i32* %7, align 4
  br label %80

70:                                               ; preds = %61
  %71 = load i32, i32* %11, align 4
  %72 = load i32, i32* %13, align 4
  %73 = load i32, i32* %12, align 4
  %74 = load i32, i32* @AV_ROUND_DOWN, align 4
  %75 = call i32 @av_rescale_rnd(i32 %71, i32 %72, i32 %73, i32 %74)
  %76 = load i32, i32* %10, align 4
  %77 = icmp slt i32 %75, %76
  br i1 %77, label %78, label %79

78:                                               ; preds = %70
  store i32 1, i32* %7, align 4
  br label %80

79:                                               ; preds = %70
  store i32 0, i32* %7, align 4
  br label %80

80:                                               ; preds = %79, %78, %69, %43
  %81 = load i32, i32* %7, align 4
  ret i32 %81
}

declare dso_local i32 @FFABS(i32) #1

declare dso_local i32 @av_rescale_rnd(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
